--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,15 @@ body    {
     margin: 0 auto;
 }
 
+button {
+    border: none;
+    background: none;
+}
+
 :root {
     --maincolor:#ffffff;
     --abcsize: 18px;
 }
-
 
 li  {
     list-style: none;
@@ -35,20 +39,20 @@ a   {
 .main_header    {
     display: flex;
     justify-content: space-between;
-    padding: 20px 0;
+    padding: 10px 0;
     align-items: center;
 }
 
- .manu_bar > ul {
+ header .main_header .manu nav > ul {
     display: flex;
     gap: 10px;
 }
 
- .manu_bar li {
+ header .main_header .manu nav li {
     position: relative;
 }
 
- .manu_bar li a   {
+ header .main_header .manu nav li a   {
     display: block;
     padding: 8px 15px;
     background: none;
@@ -60,7 +64,7 @@ a   {
     transition: all 0.3s;
 }
 
- .manu_bar ul ul  {
+ header .main_header .manu nav ul ul  {
     visibility: hidden;
     opacity: 0;
     min-width: 150px;
@@ -72,44 +76,51 @@ a   {
     background: #ffffff;
 }
 
-.manu_bar ul ul li a {
+header .main_header .manu nav ul ul li a {
     color: #212121;
     font-size: 20px;
     font-weight: 600;
 }
 
-.manu_bar ul ul li:hover a  {
+header .main_header .manu nav ul ul li:hover a  {
     color: #ff0101;
     transform: translateX(5px);
 }
 
-.manu_bar ul ul li ul li:hover a    {
+header .main_header .manu nav ul ul li ul li:hover a    {
     color: #00a6fb;
 }
 
-.manu_bar ul li:hover > ul {
+header .main_header .manu nav ul li:hover > ul {
   top: 100%;
   visibility: visible;
   opacity: 1;
 }
 
-.manu_bar ul ul ul {
+header .main_header .manu nav ul ul ul {
   left: 100%;
 }
 
-.manu_bar ul ul li:hover > ul {
+header .main_header .manu nav ul ul li:hover > ul {
   top: 0;
 }
 
 .main_header .logo {
-    width: 20%;
+    width: 150px;
+    height: 50px;
+}
+.main_header .logo img  {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: contain;
 }
 
-.main_header button {
-    font-size: 18px;
-    font-weight: 300;
+.main_header .book {
+    font-size: 15px;
+    font-weight: 700;
     color: #ffffff;
-    padding: 10px 20px;
+    padding: 5px 20px;
     line-height: 20px;
     transition: all ease-in-out .3s;
     cursor: pointer;
@@ -118,9 +129,14 @@ a   {
     border-radius:30px ;
 }
 
-.main_header button:hover   {
+.main_header .book:hover   {
     color:#ff0101;
     background: #fff;
+}
+
+header .main_header .manu .header_clo_button,
+header .main_header .toggle_button {
+    display: none;
 }
 
 /* .header_end */
@@ -131,6 +147,7 @@ a   {
     position: relative;
     margin-bottom: 207px;
     height: 734px;
+    overflow: hidden;
 }
 
 .banner .image_div  {
@@ -149,7 +166,7 @@ a   {
 
 .banner .image_div h1 {
     font-size: 70px;
-    font-weight: 300;
+    font-weight: 500;
     font-family: "Dancing Script", cursive;
     color: #fff;
     max-width: 550px;
@@ -290,6 +307,7 @@ a   {
 
 .photogrophy    {
     padding-bottom: 120px;
+    overflow: hidden;
 }
 
 .photogrophy .photogrophy_div,.photogrophy .photogrophy_div .image_div   {
@@ -383,12 +401,12 @@ a   {
 
 .slick-prev {
     top: -9%;
-    right: 9%;
+    right: 3%;
     left: unset;
 }
 
 .slick-next {
-    right: 3%;
+    right: 0%;
     top: -9%;
 }
 
@@ -481,7 +499,7 @@ a   {
     color: var(--maincolor) ;
 }
 .our-service .slick-arrow.slick-prev {
-  background: url("../images/arrow.png") 0 0 / 100% no-repeat;
+  background: url("../images/arrow\ -\ Copy.png") 0 0 / 100% no-repeat;
 }
 .our-service .slick-arrow.slick-next {
   background: url("../images/arrow.png") 0 0 / 100% no-repeat;
@@ -496,6 +514,7 @@ a   {
 
 .pre_Wedding    {
    padding-bottom: 290px ;
+   overflow: hidden;
 }
 
 .pre_Wedding .pre_wedding   {
@@ -514,6 +533,7 @@ a   {
     width: 100%;
     height: 100%;
     display: block;
+    object-fit: cover;
 }
 
 .pre_Wedding .pre_wedding .image_center  {
@@ -775,6 +795,7 @@ a   {
     width: 100%;
     height: 100%;
     display: block;
+    object-fit: cover;
 }
 
 .gallery .gallery_div .left_box .image_down  {
